se agrega evento Click a continente del DropDown

--- a/dash.html
+++ b/dash.html
@@ -17,12 +17,12 @@
             <!-- <input type="text" class="form-control" id="countryInput" placeholder="Escribe el Pais"> -->
             <!-- <button type="button" class="btn btn-dark btn-outline-warning mt-4" data-bs-toggle="button" id="btnBuscar">Buscar</button> -->
             
-            <div class="dropdown">
+            <div class="dropdown  text-center" >
                 <button class="btn btn-dark btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Continente
                 </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">America</a></li>
+                <ul class="dropdown-menu" id="lstContinente">
+                  <li><a class="dropdown-item" id="btnAmerica" href="#">America</a></li>
                   <li><a class="dropdown-item" href="#">Asia</a></li>
                   <li><a class="dropdown-item" href="#">Africa</a></li>
                   <li><a class="dropdown-item" href="#">Europa</a></li>
@@ -35,7 +35,9 @@
           
     </div>
 
-
+    <div class="container text-center" id="divCuerpo">
+      <p>..........</p>
+    </div>
   
 
     <!-- JavaScript Bundle with Popper -->
