--- a/dash.html
+++ b/dash.html
@@ -38,10 +38,17 @@
     <div class="container text-center" id="divCuerpo">
       <p>..........</p>
     </div>
+    
+
+    <div class="container">
+      <canvas id="poblacionChrt" width="400" height="400"></canvas>
+    </div>
   
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" ></script>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
