se corrige responsividad

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  <section>
     <div class="container d-flex justify-content-center">
         <div class="mb-3 row col-6 mt-5 display-4 ">
-            <label for="formGroupExampleInput" class="form-label text-center">Población Mundial</label>
+            <label for="formGroupExampleInput" class="form-label text-center display-5 ">Población Mundial</label>
             
             <div class="dropdown  text-center" >
                 <button class="btn btn-dark btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -70,13 +70,13 @@
                 
         </div>
 
-        <div class=" grafico container d-flex align-content-center justify-content-center">
+        <div class="  grafico container d-flex align-content-center justify-content-center">
           <canvas  id="poblacionChrt" ></canvas>  
         </div>
   </div>
   </section>
   
-    <footer class="container-fluid  text-bg-secondary p-3 text-center">
+    <footer class="container-fluid   text-bg-secondary p-3 text-center">
       <div class="direcciones">
           <h5>Desarrollado por: Jonathan Morales y Erbin Velásquez - UDD</h5>
        </div>
