se vuelve a corregir la responsividad

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  </header>
  <section>
     <div class="container d-flex justify-content-center">
-        <div class="mb-3 row col-6 mt-5 display-4 ">
+        <div class="mb-3 row col-6 col-sm-10 mt-3 display-4 ">
             <label for="formGroupExampleInput" class="form-label text-center display-5 ">Población Mundial</label>
             
             <div class="dropdown  text-center" >
@@ -70,7 +70,7 @@
                 
         </div>
 
-        <div class="  grafico container d-flex align-content-center justify-content-center">
+        <div class="  grafico container d-flex align-content-center justify-content-center pb-5">
           <canvas  id="poblacionChrt" ></canvas>  
         </div>
   </div>
